# poly

./: .gitignore
INF2010/: .gitignore
INF2010/TP1/src/: BWPixel.java  ColorPixel.java  FormValidator.java  GrayPixel.java  Main.java  PixelMap.java  PixelMapPlus.java  TransparentPixel.java
INF2010/TP2/src/: ArrayQueue.java  EmptyQueueException.java  File.java  LinkedListQueue.java  PostfixSolverMain.java  Queue.java  QueueMain.java  SortStackMain.java
INF2010/TP3/src/: DoubleHashingTable.java  HashFunctions.java  HashMapTest.java  LinearSpacePerfectHashing.java  (+3 more)
INF4410/: .gitignore
INF4410/Lab1.1/: README.md  launch.sh  rapport.md  server
INF4410/Lab1.2/: README.md  launch.sh
INF4410/Lab2/: README.md  build.xml  launch.sh  master  rapport.md  results1.csv  results3.csv  slave  stop.sh
INF4410/Lab3/: install.sh  install.yaml  loadBalancing_etudiants.yaml  rapport.md
INF4710/: .gitignore
INF4710/TP1/: TP1.sln  cr.md
INF4710/TP2/: CMakeLists.txt  TP2Utils.h  dct.h  decoupage.h  idct.h  idecoupage.h  izigzag.h  main.cpp  mat2huff.h  match_block.h  quantif.h  test_match.h  zigzag.h
INF4710/TP2/rapport/: content.md
INF4710/TP3/: .~logs1.xlsx  CMakeLists.txt  convo.h  detect.h  dilatation.h  edge.h  inf4710_tp3.sln  inf4710_tp3.vcxproj  inf4710_tp3.vcxproj.filters  logs.bak.csv  main.cpp  rapport.md  seuillage.h
LOG2420/TD1/: seances-bonus.html  seances.css  seances.html  seances.js  seances.json
LOG2420/TD2/: CompteurJetons.js  compteur.css  index.html  main.js  worker.js
LOG2420/TD3/: map.html  map.js  styles.css
LOG3430/: .gitignore
(+57 files in other folders)
